Prevent tops of blog title appearing when they're pushed out of win-container by a 4-line post title. Make the text on the widelogo.png tile larger and align to pixel grid so it doesn't look blurry when reduced by the OS.

--- a/WPv3/css/posts-list.css
+++ b/WPv3/css/posts-list.css
@@ -188,6 +188,7 @@
 .posts-list .post .post-meta {
     font-size: 9pt;
     line-height: 16pt;
+    margin-top: 1px;
     color: #78C8E6;
     overflow: hidden;
     -ms-text-overflow: ellipsis;
